--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -38,5 +40,8 @@
   "devDependencies": {
     "@types/jest": "^28.1.1",
     "msw": "^0.42.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
